--- a/springboot_background_system/src/main/resources/templates/system/user/userInfo.html
+++ b/springboot_background_system/src/main/resources/templates/system/user/userInfo.html
@@ -226,13 +226,13 @@
             		 address:data.field.address,
             		 sex:data.field.sex,
             		 remark:data.field.remark,
-            		 deptid:data.field.deptid,
+            		 // deptid:data.field.deptid,
             		 imgpath:data.field.imgpath,
             		 mgr:data.field.mgr
             	}
             , function (res) {
             	
-                layer.msg(res.msg);
+                //layer.msg(res.msg);
             });
 //             setTimeout(function(){
 //                 layer.close(index);
