--- a/springboot_background_system/src/main/resources/templates/system/goods/goodsManager.html
+++ b/springboot_background_system/src/main/resources/templates/system/goods/goodsManager.html
@@ -117,7 +117,7 @@
             <div class="layui-inline" style="display: none">
                 <label class="layui-form-label">id</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="id" id="id" lay-verify="required" autocomplete="off"
+                    <input type="text" name="id" id="id" autocomplete="off"
                            placeholder="" class="layui-input">
                 </div>
             </div>
